# DevNotSummit2024

./: .gitignore  Cargo.toml  README.md
classic/: Cargo.toml
classic/src/: main.rs
composition/: Cargo.toml
composition/src/: main.rs
dream-catcher/: Cargo.toml
dream-catcher/src/: constants.rs  main.rs
ecs_on_python/: guess_the_number.py
game_with_bevy/: Cargo.toml
game_with_bevy/src/: main.rs
game_without_bevy/: Cargo.toml
game_without_bevy/src/: main.rs
hello_ecs/: Cargo.toml
hello_ecs/src/: main.rs
hello_ecs/src/components/: mod.rs
hello_ecs/src/entities/: mod.rs
hello_ecs/src/systems/: mod.rs
inside_bevy/: Cargo.toml
inside_bevy/src/: main.rs
learning_ecs/: Cargo.toml
learning_ecs/src/: bevy_style.rs  classic.rs  composition.rs
pong/: Cargo.toml
pong/src/: constants.rs  main.rs
practices_1/: Cargo.toml
practices_1/src/: main.rs
practices_2/: Cargo.toml
practices_2/src/: main.rs
practices_3/: Cargo.toml
practices_3/src/: main.rs
practices_4/: Cargo.toml
practices_4/src/: main.rs
robotic/: Cargo.toml
robotic/src/: main.rs
shuttle_game/: Cargo.toml
shuttle_game/src/: main.rs  movement.rs  pickup_crate.rs  shuttle.rs
simple_ecs/: Cargo.toml
simple_ecs/src/: main.rs
simple_ecs_2/: Cargo.toml
simple_ecs_2/src/: main.rs
