[workspace]
resolver = "2"
members = [
    "classic"
    , "composition"
    , "dream-catcher"
    , "game_with_bevy"
    , "game_without_bevy"
    , "hello_ecs"
    , "inside_bevy"
    , "practices_1"
    , "practices_2"
    , "practices_3", "practices_4", "robotic"
    , "simple_ecs"
    , "simple_ecs_2"
]
